--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -227,6 +227,7 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
+      <img class="celebration" src="./assets/celebration.webp" />
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
