working very hard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -228,6 +228,12 @@
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
       <img class="celebration" src="./assets/celebration.webp" />
+      <h2>Someone worked very hard</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ab odio 
+        quis animi voluptatem eligendi, veniam, quisquam dolore eveniet tempora 
+        excepturi aliquid? Unde nam error suscipit ea commodi debitis ducimus.
+      </p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
