implementing modal shown to user

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -227,7 +227,7 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
-      <img class="celebration" src="./assets/celebration.webp" />
+      <img class="celebration" (click)="askDataToUser()" src="./assets/celebration.webp" />
       <h2>Someone worked very hard</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ab odio 
